fix(style) removed padding on mobile

--- a/_includes/style.scss
+++ b/_includes/style.scss
@@ -259,7 +259,10 @@ nav {
 .post, .page {
   max-width: 780px;
   background: white;
-  padding: 40px 30px 30px 100px;
+  padding: 20px;
+  @media screen and (min-width: 640px) {
+    padding: 40px 30px 30px 100px;
+  }
 
   blockquote {
     margin: 1.8em .8em;
